newclay/test/Compiler/Propagation/Fail/IfStatementNotAllBranchesReturn1/main.clay
symbol main;
overload main() {
    if (true)
        return 1;
}
